--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
-    "coveralls": "jest --coverage"
+    "coveralls": "jest --coverage",
+    "prepare": "husky install",
+    "lint": "eslint ./src/**/*.ts"
   },
   "files": [
     "lib"
   ],
   "types": "lib/index.d.ts",
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@rollup/plugin-commonjs": "^25.0.8",
@@ -35,6 +39,16 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "6.7.0",
+    "@typescript-eslint/parser": "6.7.0",
+    "eslint": "8.49.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-prettier": "5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -42,6 +56,18 @@
     "rollup-plugin-postcss": "^4.0.2",
     "ts-jest": "^29.1.4",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "prettier": "3.0.3"
+  },
+  "lint-staged": {
+    "test/**/*.{spec.js}" : "npm run test",
+    "src/**/*.{ts}": [
+      "eslint --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
