--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/ViaColby/business-utils.git"
   },
-  "keywords": [],
+  "keywords": ["utils"],
   "author": "",
   "license": "MIT",
   "bugs": {
@@ -47,7 +47,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-prettier": "5.0.0",
-    "husky": "^8.0.3",
+    "husky": "8.0.3",
     "lint-staged": "^15.1.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
