--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "prettier": "3.0.3"
   },
   "lint-staged": {
-    "test/**/*.{spec.js}" : "npm run test",
-    "src/**/*.{ts}": [
+    "test/**/*.spec.js" : "npm run test",
+    "src/**/*.ts": [
       "eslint --fix"
     ]
   },
