--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "business-utils",
+  "name": "@zeropoint/business-utils",
   "version": "1.0.0",
   "description": "utils for business",
   "private": false,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ViaColby/business-utils.git"
