--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@liuqisiwu/business-utils",
+  "name": "@liuqisiwu/utils",
   "version": "1.0.0",
   "description": "utils for business",
   "private": false,
